fixed z-index

--- a/src/styles/ui/ConnectionContainer.scss
+++ b/src/styles/ui/ConnectionContainer.scss
@@ -14,8 +14,8 @@
     right:0;
     font-size:1.3rem;
     margin: 2px 2px 0 0;
-    z-index:1.5;
-    }
+    z-index:2;
+  }
 
   .presentation-table {
     width: 100%; 
