--- a/src/styles/views/TripOverview.scss
+++ b/src/styles/views/TripOverview.scss
@@ -140,7 +140,7 @@
           right:0;
           font-size:1.5rem;
           margin: 2px 2px 0 0;
-          z-index:1.5;
+          z-index:2;
         }
       }
     }
@@ -240,7 +240,7 @@
     max-height: 500px;
     overflow: auto;
     right: 0%;
-    z-index:2;
+    z-index:3;
   }
 
 }
